# mg3a

./: .gitignore  AUTHORS  COPYING  ChangeLog  Changelog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.FreeBSD  README.auto-execute  README.bindings  README.bsd  README.clike-mode  README.debian  README.dired  README.fill-paragraph  README.md  README.mg3  README.misc  README.programmer  README.python-mode  README.reference  README.rpm  README.shell-command  README.todo  README.ucsnames  README.undo  README.user_macros  README.user_modes  basic.c  bootstrap.sh  buffer.c  chrdef.h  cinfo.c  config.h  config.h.in  configure  (+47 more)
FreeBSD/: Makefile  README.FreeBSD  manifest.in
bl/: Makefile.am  README  dot.mg  dot.mg-cygwin  dot.mg-xterm  dot.mg3
debian/: README.Debian  README.source  changelog  control  copyright  docs  rules
debian/patches/: 01-pipein.diff  02-Makefile.bsd  series
orig/: Makefile.am
orig/sys/: README
orig/sys/bsd/: fileio.c  spawn.c  sysdef.h  ttyio.c
orig/sys/default/: tty.c  ttydef.h
orig/sys/sysv/: fileio.c  ttyio.c
sys/: README
sys/bsd/: Makefile  distinfo  pkg-descr  pkg-plist
sys/osx/: README  mg3a.rb
sys/rudix/: Makefile
sys/unix/: README  mgedit.sh  mgfunc.sh  mgt.sh
xtras/: Dockerfile  Dockerfile.f41  Makefile  build-deb.sh  build-rpm.sh  docker-build.sh  mg3a-zips.diff
xtras/specs/: mg3a.spec  mg3a.spec~
